package br.com.academico.aluno;

public enum SituacaoAluno {
    APROVADO, RECUPERACAO, REPROVADO;
}
